Prevent scrollbar jumps

--- a/apps/web/styles/global.css
+++ b/apps/web/styles/global.css
@@ -2,6 +2,7 @@ body {
 	position: relative;
 	min-height: 100vh;
 	min-height: 100svh;
+	overflow-y: scroll;
 }
 
 body::before {
